2007-02-06  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/Makefile.am:
	* examples/hildon-get-password-dialog-example.c:
	* examples/hildon-login-dialog-example.c:
	* examples/hildon-set-password-dialog-example.c: Adding examples for
	password dialogs.

	* src/hildon-get-password-dialog.c: Doc fix.

	* src/hildon-login-dialog.c: Do not show the username as hidden field. 

2007-02-06  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* HACKING: Adding a HACKING file with some basic rules of styling and
	code formatting.

2007-02-06  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-color-button.c:
	* src/hildon-color-button.h: Updating documentation.

	* src/hildon-helper.c: Correcting some formatting glitches.

2007-02-06 Xan Lopez <xan.lopez@nokia.com> 

	* src/hildon-helper.c:
	* src/hildon-helper.h:

	Fix the insensitive message function to copy the string in the widget,
	as it might not valid anymore when the banner needs to be displayed.

	Also add a version with printf-like string formatting.

2007-02-06  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/hildon-insensitive-example.c: Correcting the example for
	insensitive press to use HildonWindow. For strange reasons doesn't
	work with Dialogs.

2007-02-05  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/Makefile.am:
	* examples/hildon-insensitive-example.c: Example for the insensitive
	message setting.

	* src/hildon-helper.c: Insensitive implementation by Xan Lopez.

2007-02-05  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/hildon-controlbar-example.c:
	* src/hildon-controlbar.c: Fixing the controlbar to behave as if
	minimal-bars-visible (old 2.6 mod) was equal 1.

	* src/hildon-banner-private.h:
	* src/hildon-banner.c: Fixing the problem with two information banners
	being spawned one after another.

2007-02-04  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
