@@ -1,3 +1,8 @@
+2007-02-07  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
+
+	* src/hildon-color-chooser-dialog.c:
+	* src/hildon-color-chooser.c: Small documentation fixes.
+
 2007-02-06  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
 
 	* examples/Makefile.am:
